# AVS

./: README.md
src/: README.md
src/avder/: CMakeLists.txt  package.xml
src/avder/src/: edr.cpp  edr_test.cpp
src/computation/: CMakeLists.txt  count.cpp  pointcloud_filter.cpp
src/computation/eval/: kiss_icp_eval.py  kitti (vs005sor).ipynb  kitti (vs01only) .ipynb  kitti (vs01sor).ipynb  kitti (vs02only).ipynb  kitti (vs03only).ipynb  kitti (vs04only).ipynb  kitti (vs05only).ipynb  kitti (vs06only).ipynb  kitti (vs07only).ipynb  kitti (vs08only).ipynb  kitti (vs09only).ipynb  kitti (vs1only).ipynb  kitti.ipynb  kitti_raw.ipynb
src/computation/eval/.ipynb_checkpoints/: kitti-checkpoint.ipynb
src/computation/eval/results/: latest
src/computation/eval/results/2025-02-13_15-44-14/: 00_poses.npy  00_poses_kitti.txt  00_poses_tum.txt
src/computation/eval/results/2025-02-13_15-44-38/: 01_poses.npy  01_poses_kitti.txt  01_poses_tum.txt
src/computation/eval/results/2025-02-13_15-45-58/: 02_gt.npy  02_gt_kitti.txt  02_gt_tum.txt  02_poses.npy  02_poses_kitti.txt  02_poses_tum.txt
src/computation/eval/results/2025-02-13_15-46-14/: 03_gt.npy  03_gt_kitti.txt  03_gt_tum.txt  03_poses.npy  03_poses_kitti.txt  03_poses_tum.txt
src/computation/eval/results/2025-02-13_15-46-20/: 04_gt.npy  04_gt_kitti.txt  04_gt_tum.txt  04_poses.npy  04_poses_kitti.txt  04_poses_tum.txt
src/computation/results/: Computation Results.ods
src/computation/script/: count_all.sh  filter_all.sh  visualize.py
src/lidar_frame_deduplicate/results/: chi_square_score.ods
src/lidar_frame_deduplicate/script/: frame_deduplicate.py  frame_deduplicate_ros2_rviz.py
src/pcl_filter/: CMakeLists.txt  package.xml
src/pcl_filter/src/: pcl_filter_node.cpp
src/ros2bag_write_benchmark/: README.md  package.xml  setup.cfg  setup.py
src/ros2bag_write_benchmark/config/: benchmarker_params.yaml
src/ros2bag_write_benchmark/launch/: benchmarker_launch.py
src/ros2bag_write_benchmark/params/: benchmarker_params.yaml
src/ros2bag_write_benchmark/ros2bag_write_benchmark/: benchmarker.py
